// Copyright 2021 Zenauth Ltd.

syntax = "proto3";

package decisionlog.v1;

option go_package = "github.com/cerbos/cerbos/internal/genpb/decisionlog/v1;decisionlogv1";
option java_package = "dev.cerbos.api.v1.decisionlog";
option csharp_namespace = "Cerbos.Api.V1.DecisionLog";

import "google/protobuf/timestamp.proto";
import "request/v1/request.proto";
import "response/v1/response.proto";

message Decision {
    google.protobuf.Timestamp request_time = 1;
    string request_id = 2;
    Source source = 3;
    RequestPayload request = 4;
    ResponsePayload response = 5;
}

message Source {
    oneof ip_address {
        fixed32 v4 = 1;
        bytes v6 = 2;
    }
}
        
message RequestPayload {
    oneof payload {
        request.v1.CheckResourceSetRequest check_resource_set = 1;
        request.v1.CheckResourceBatchRequest check_resource_batch = 2;
        request.v1.AddOrUpdatePolicyRequest add_or_update_policy = 3;
    }
}

message ResponsePayload {
    oneof payload {
        response.v1.CheckResourceSetResponse check_resource_set = 1;
        response.v1.CheckResourceBatchResponse check_resource_batch = 2;
        response.v1.AddOrUpdatePolicyResponse add_or_update_policy = 3;
    }
}
